Add missing conversion from CarDBModel to Car
